[package]
name = "csvdiff"
version = "0.2.1"
edition = "2024"
authors = ["Taha Hachana <tahahachana@gmail.com>"]
description = "Compare two CSV files by key and show differences."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/TahaHachana/csvdiff"
keywords = ["csv", "diff", "cli"]
categories = ["command-line-utilities"]

[dependencies]
csv = "1.3.1"
clap = { version = "4.5.39", features = ["derive"] }
tabled = "0.20.0"
rust_xlsxwriter = "0.79.0"